fix tag-anchor color being almost invisible

--- a/source/css/_common/_section/sidebar.styl
+++ b/source/css/_common/_section/sidebar.styl
@@ -275,7 +275,7 @@
   display: inline-block;
   border: 1px solid #DDD;
   text-decoration: none;
-  color: white;
+  color: #DDD !important;
   background-color: #333;
   font-size: 0.8em;
   padding: 0.2em;
